--- a/backend/java/src/com/hdca/util/test/notes/notes.html
+++ b/backend/java/src/com/hdca/util/test/notes/notes.html
@@ -102,15 +102,15 @@
 						</tr>
 					</thead>
 					<tr>
-						<td>SVN根地址</td>
-						<td>旧: https://hdca.svn.cloudforge.com/hdca<br>新: https://hdca.unfuddle.com/svn/hdca_hdca/</td>
+						<td>git仓库地址</td>
+						<td>https://github.com/hdca/hdca.git</td>
 					</tr>
 					<tr>
-						<td>SVN用户名</td>
-						<td>hdca2014</td>
+						<td>github用户名</td>
+						<td>hdca</td>
 					</tr>
 					<tr>
-						<td>SVN密码</td>
+						<td>github密码</td>
 						<td>Zhuangxiu2014</td>
 					</tr>
 					<tr>
@@ -129,6 +129,18 @@
 						<td>邮件发送密码</td>
 						<td>zhuangxiu</td>
 					</tr>
+					<tr>
+						<td>SVN仓库地址</td>
+						<td>旧: https://hdca.svn.cloudforge.com/hdca<br>新: https://hdca.unfuddle.com/svn/hdca_hdca/</td>
+					</tr>
+					<tr>
+						<td>SVN用户名</td>
+						<td>hdca2014</td>
+					</tr>
+					<tr>
+						<td>SVN密码</td>
+						<td>Zhuangxiu2014</td>
+					</tr>					
 					<tr>
 						<td>待做</td>
 						<td>
